welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:4: error: Missing closing brace `}' assumed here
while (nbBiscuit!=4) { avance() ;
^