welcome.lessons.welcome.methods.basics.Methods.scala.code
        def goAndGet() {var nbBiscuit: Int=0
while (nbBiscuit!=4) { avance() ;
	if (estSurBiscuit) {nbBiscuit=nbBiscuit+1};}


        for (i <- 1 to 7) {
            goAndGet();
            droite();
            recule();
            gauche();
        }
